--- a/TodoList-React-TS/src/components/styles.css
+++ b/TodoList-React-TS/src/components/styles.css
@@ -55,10 +55,11 @@
     display: flex;
     width: 29.5%;
     border-radius: 5px;
-    padding: 20px;
+    padding: 8px;
     margin: 10px 0;
-    background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
+    background-color: #ddf3ff73;
   }
+
   .todos__single--text {
     flex: 1;
     padding: 5px;
