feat: filter completed and pending todos

--- a/TodoList-React-TS/src/components/styles.css
+++ b/TodoList-React-TS/src/components/styles.css
@@ -1,3 +1,8 @@
+.heading {
+  font-style: italic;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
 .input {
     display: flex;
     width: 80%;
@@ -74,4 +79,19 @@
     margin-left: 10px;
     font-size: 25px;
     cursor: pointer;
+  }
+
+  .filter {
+    margin-top: 10px;
+  }
+
+  .filter_label {
+    font-size: 18px;
+    margin-right: 10px;
+  }
+
+  #select-filter {
+    padding: 5px;
+    border: none;
+    outline: none;
   }
