--- a/TodoList-React-TS/src/App.css
+++ b/TodoList-React-TS/src/App.css
@@ -4,14 +4,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #2f51c0a3;
 }
 
 .heading {
   text-transform: uppercase;
   font-size: 40px;
   margin: 30px 0;
-  color: rgb(0, 0, 0);
+  color: #71dbd8;
   z-index: 1;
   text-align: center;
 }
